build: Generate Angular cache and Java compiled class files.